stuf/src/p1/tests/t019.err
Parse error on line 2 reported by parser: syntax error, unexpected int constant, expecting identifier.
