stuf/src/p1/tests/t019.gpl
//variables can't begin with a digit
string 5this_aint_right;
